[gd_scene load_steps=3 format=3 uid="uid://dgfsq00k7b3bm"]

[ext_resource type="Script" uid="uid://b2hghvcy5tw0v" path="res://scripts/UI/InventoryUI.gd" id="1_wmg3i"]
[ext_resource type="StyleBox" uid="uid://b401irur22ern" path="res://assets/themes/inventory_ui.tres" id="2_1pwrc"]

[node name="inventory_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wmg3i")
inventory_component_path = NodePath(".")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 887.0
offset_bottom = 549.0
mouse_filter = 1
color = Color(0, 0, 0, 0.03529412)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.003921569, 0.03529412, 0.019607844, 1)
theme_override_font_sizes/font_size = 20
text = "INVENTARIO"

[node name="WalletLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.003921569, 0.32941177, 0, 1)
text = "0 Asteriones"

[node name="Content" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ItemsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/Content"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_1pwrc")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Content/ItemsPanel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content/ItemsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="WeaponsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/Content"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_1pwrc")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Content/WeaponsPanel"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="WeaponsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content/WeaponsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Footer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SelectedFragmentLabel" type="Label" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.03137255, 0.03137255, 1)
theme_override_font_sizes/font_size = 14

[node name="ControlsHint" type="Label" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
